# comic-library

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
tests/: test_comic_library.py
