[tool.poetry]
name = "comic-library"
version = "0.1.0"
description = "Comic library and reader written in Flask."
authors = ["PawlakMarek <26022173+PawlakMarek@users.noreply.github.com>", "mattpawlak <33327341+mattpawlak@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.2"
Flask-SQLAlchemy = "^2.5.1"
Flask-WTF = "^0.15.1"
Flask-Login = "^0.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^3.0.0"
flake8 = "^3.9.2"
black = {version = "^21.9b0", allow-prereleases = true}
mypy = "^0.910"
pydantic = "^1.8.2"
isort = "^5.9.3"
pytest-flask = "^1.2.0"

[tool.black]
line-length = 79
target-version = ['py39']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 79

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
